docs: overhaul file-by-file reference and remove redundant service section